--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
         <div id="rightUpChart"></div>
 
-        <div id="rightDown" style="display:flex;gap:10px;">
-            <div id="rightDown-chart" style="flex:1;padding:12px;background:#fff;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.04)"></div>
+        <div id="rightDown" style="display:flex;padding: 0px;">
+            <div id="rightDown-chart" style="flex:1;background:#fff;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.04)"></div>
         </div>
     </div>
 
